--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,25 +5,42 @@
               android:layout_height="match_parent"
               android:background="#ffffff"
               android:orientation="vertical">
-    <LinearLayout android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:layout_weight="0.01">
-        <TextView android:layout_width="wrap_content"
-                  android:text="标题:"
-                  android:textColor="@color/colorBlack"
-                  android:gravity="center"
-                  android:textSize="20sp"
-                  android:layout_marginRight="5sp"
-                  android:layout_height="match_parent"/>
+    <android.support.design.widget.AppBarLayout
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:theme="@style/AppTheme.AppBarOverlay">
+        <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="?attr/colorPrimary"
+                android:layout_weight="1"
+                android:scrollbars="vertical">
+            <TextView android:layout_width="wrap_content"
+                      android:text="标题:"
+                      android:textColor="#FFF"
+                      android:gravity="center"
+                      android:textSize="20sp"
+                      android:layout_marginRight="5sp"
+                      android:layout_height="match_parent"/>
+            <EditText
+                    android:textSize="15sp"
+                    android:background="@drawable/style_border"
+                    android:textColor="#252525"
+                    android:layout_marginRight="10sp"
+                    android:layout_height="match_parent" android:layout_width="match_parent"
+                    android:singleLine="true"
+                    android:selectAllOnFocus="false"
+                     android:textColorLink="@android:color/background_dark"/>
+            <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="保存"
+                    android:layout_gravity="right"
+                    android:layout_alignParentBottom="true"/>
+        </android.support.v7.widget.Toolbar>
+    </android.support.design.widget.AppBarLayout>
 
-        <EditText android:layout_width="wrap_content"
-                  android:layout_weight="1"
-                  android:textSize="15sp"
-                  android:background="@drawable/style_border"
-                  android:textColor="#252525"
-                  android:layout_marginRight="10sp"
-                  android:layout_height="match_parent"/>
-    </LinearLayout>
     <com.chen.app.view.PictureAndTextEditorView
             android:paddingTop="10sp"
             android:paddingBottom="10sp"
@@ -38,78 +55,81 @@
             android:gravity="start"
             android:background="@drawable/style_border"
             android:textColor="@color/colorBlack"
-    />
-    <LinearLayout android:layout_width="match_parent"
-                  android:layout_height="wrap_content">
-        <Button
-                android:id="@+id/btnSetFontColor"
+            android:textColorLink="@android:color/background_dark"/>
+    <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scrollbars="none">
+        <LinearLayout
+                android:id="@+id/linearLayoutMenu"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="字体颜色"
-                android:layout_alignParentBottom="true"/>
-        <Button
-                android:id="@+id/btnSetBackColor"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="背景颜色"
-                android:layout_alignParentBottom="true"/>
-        <Button
-                android:id="@+id/btnAddPic"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="图片"
-                android:layout_alignParentBottom="true"/>
-        <Button
-                android:id="@+id/btnSelectColor"
-                android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:text="颜色"
-                android:layout_alignParentBottom="true"/>
-    </LinearLayout>
-    <LinearLayout android:layout_width="match_parent"
-                  android:layout_height="wrap_content" android:weightSum="1">
-        <Button android:layout_width="wrap_content"
-                android:id="@+id/btnSetFontSize"
-                android:text="字体大小:"
-                android:layout_height="match_parent"/>
-        <EditText
-                android:layout_width="27dp"
                 android:layout_height="wrap_content"
-                android:inputType="numberDecimal"
-                android:ems="10"
-                android:textColor="@color/colorBlack"
-                android:id="@+id/etFontSize"/>
-        <Button android:layout_width="wrap_content"
-                android:id="@+id/btnSetStrikeThrough"
-                android:text="删除线"
-                android:layout_height="match_parent" android:layout_weight="0.07"/>
-        <Button android:layout_width="wrap_content"
-                android:id="@+id/btnSetUnderline"
-                android:text="下划线"
-                android:layout_height="wrap_content" android:layout_weight="0.07"/>
-        <Button android:layout_width="72dp"
-                android:id="@+id/btnSave"
-                android:text="保存"
-                android:layout_height="match_parent"/>
-    </LinearLayout>
-    <LinearLayout android:layout_width="match_parent"
-                  android:layout_height="wrap_content" android:weightSum="1">
-        <Button android:layout_width="wrap_content"
-                android:id="@+id/btnSetSuperscript"
-                android:text="上标"
-                android:layout_height="match_parent"/>
-        <Button android:layout_width="wrap_content"
-                android:id="@+id/btnSetSubscript"
-                android:text="下标"
-                android:layout_height="match_parent"/>
-        <Button android:layout_width="wrap_content"
-                android:id="@+id/btnSetStyleBOLD"
-                android:text="粗体"
-                android:layout_height="match_parent"/>
-        <Button android:layout_width="wrap_content"
-                android:id="@+id/btnSetStyleITALIC"
-                android:text="斜体"
-                android:layout_height="wrap_content"/>
-
-    </LinearLayout>
+                android:background="@color/colorGray"
+                android:gravity="center_vertical">
+            <Button
+                    android:id="@+id/btnSetFontColor"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="字体颜色"
+                    android:layout_alignParentBottom="true"/>
+            <Button
+                    android:id="@+id/btnSetBackColor"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="背景颜色"
+                    android:layout_alignParentBottom="true"/>
+            <Button
+                    android:id="@+id/btnAddPic"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="图片"
+                    android:layout_alignParentBottom="true"/>
+            <Button
+                    android:id="@+id/btnSelectColor"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="颜色"
+                    android:layout_alignParentBottom="true"/>
+            <Button android:layout_width="wrap_content"
+                    android:id="@+id/btnSetFontSize"
+                    android:text="字体大小:"
+                    android:layout_height="wrap_content"/>
+            <EditText
+                    android:layout_width="27dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal"
+                    android:ems="10"
+                    android:textColor="@color/colorBlack"
+                    android:id="@+id/etFontSize"
+                    android:textColorLink="@android:color/background_dark"/>
+            <Button android:layout_width="wrap_content"
+                    android:id="@+id/btnSetStrikeThrough"
+                    android:text="删除线"
+                    android:layout_height="match_parent"/>
+            <Button android:layout_width="wrap_content"
+                    android:id="@+id/btnSetUnderline"
+                    android:text="下划线"
+                    android:layout_height="wrap_content"/>
+            <Button android:layout_width="72dp"
+                    android:id="@+id/btnSave"
+                    android:text="保存"
+                    android:layout_height="wrap_content"/>
+            <Button android:layout_width="wrap_content"
+                    android:id="@+id/btnSetSuperscript"
+                    android:text="上标"
+                    android:layout_height="match_parent"/>
+            <Button android:layout_width="wrap_content"
+                    android:id="@+id/btnSetSubscript"
+                    android:text="下标"
+                    android:layout_height="wrap_content"/>
+            <Button android:layout_width="wrap_content"
+                    android:id="@+id/btnSetStyleBOLD"
+                    android:text="粗体"
+                    android:layout_height="wrap_content"/>
+            <Button android:layout_width="wrap_content"
+                    android:id="@+id/btnSetStyleITALIC"
+                    android:text="斜体"
+                    android:layout_height="wrap_content"/>
+        </LinearLayout>
+    </HorizontalScrollView>
 </LinearLayout>
