--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,17 +5,14 @@
               android:layout_height="match_parent"
               android:background="#ffffff"
               android:orientation="vertical">
-    <android.support.design.widget.AppBarLayout
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:theme="@style/AppTheme.AppBarOverlay">
         <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_height="wrap_content"
                 android:background="?attr/colorPrimary"
-                android:layout_weight="1"
                 android:scrollbars="vertical">
+            <LinearLayout android:layout_width="match_parent"
+                          android:layout_height="match_parent">
             <TextView android:layout_width="wrap_content"
                       android:text="标题:"
                       android:textColor="#FFF"
@@ -23,23 +20,26 @@
                       android:textSize="20sp"
                       android:layout_marginRight="5sp"
                       android:layout_height="match_parent"/>
-            <EditText
-                    android:textSize="15sp"
-                    android:background="@drawable/style_border"
-                    android:textColor="#252525"
-                    android:layout_marginRight="10sp"
-                    android:layout_height="match_parent" android:layout_width="match_parent"
-                    android:singleLine="true"
-                    android:selectAllOnFocus="false"
-                     android:textColorLink="@android:color/background_dark"/>
-            <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="保存"
-                    android:layout_gravity="right"
-                    android:layout_alignParentBottom="true"/>
+                <EditText
+                        android:textSize="15sp"
+                        android:textColor="@android:color/white"
+                        android:layout_marginRight="10sp"
+                        android:layout_height="match_parent"
+                        android:singleLine="true"
+                        android:layout_weight="1.0"
+                        android:textColorLink="@android:color/background_dark"
+                        android:layout_width="match_parent"/>
+                <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="保存"
+                        android:layout_gravity="right"
+                        android:textSize="15sp"
+                        android:textColorLink="@android:color/background_dark"
+                        android:background="@drawable/selector_btn_save"
+                        android:textColor="#ff00ddff"/>
+            </LinearLayout>
         </android.support.v7.widget.Toolbar>
-    </android.support.design.widget.AppBarLayout>
 
     <com.chen.app.view.PictureAndTextEditorView
             android:paddingTop="10sp"
@@ -88,7 +88,7 @@
                     android:id="@+id/btnSelectColor"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="颜色"
+                    android:text="选择颜色"
                     android:layout_alignParentBottom="true"/>
             <Button android:layout_width="wrap_content"
                     android:id="@+id/btnSetFontSize"
