--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -19,6 +19,7 @@
     <ListView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/listview"
             android:background="#fff"
             android:layout_alignParentTop="true"/>
 </RelativeLayout>
