--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -6,20 +6,16 @@
         android:id="@+id/content_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
         android:background="#fff"
         tools:showIn="@layout/activity_notelist">
-        <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
+    <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
+    <!--tools:context="app.chen.com.swaplayout.MainActivity"-->>
+    <com.chen.app.view.ScollerLeftDeleteListView
+            android:id="@+id/list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#f1eeee"
+            android:listSelector="#00000000">
 
-        <!--tools:context="app.chen.com.swaplayout.MainActivity"-->>
-
-    <ListView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/listview"
-            android:background="#fff"
-            android:layout_alignParentTop="true"/>
+    </com.chen.app.view.ScollerLeftDeleteListView>
 </RelativeLayout>
