修复列表页面空白处点击的bug

--- a/app/src/main/res/layout/activity_notelist.xml
+++ b/app/src/main/res/layout/activity_notelist.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true">
-    <android.support.design.widget.AppBarLayout
+<!--    <android.support.design.widget.AppBarLayout
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:theme="@style/AppTheme.AppBarOverlay">
@@ -18,7 +18,7 @@
                 android:scrollbars="vertical"
                 app:popupTheme="@style/AppTheme.PopupOverlay">
         </android.support.v7.widget.Toolbar>
-    </android.support.design.widget.AppBarLayout>
+    </android.support.design.widget.AppBarLayout>-->
 
     <include layout="@layout/content_main"/>
 
