为记事本加入数据库

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
                       android:layout_marginRight="5sp"
                       android:layout_height="match_parent"/>
                 <EditText
+                        android:id="@+id/etTitle"
                         android:textSize="15sp"
                         android:textColor="@android:color/white"
                         android:layout_marginRight="10sp"
@@ -33,6 +34,7 @@
                 <Button
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:id="@+id/btnSave"
                         android:text="保存"
                         android:layout_gravity="right"
                         android:textSize="15sp"
@@ -47,7 +49,7 @@
             android:paddingBottom="10sp"
             android:paddingLeft="10sp"
             android:paddingRight="10sp"
-            android:id="@+id/edit_text"
+            android:id="@+id/etContent"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="0.90"
@@ -110,10 +112,6 @@
             <Button android:layout_width="wrap_content"
                     android:id="@+id/btnSetUnderline"
                     android:text="下划线"
-                    android:layout_height="wrap_content"/>
-            <Button android:layout_width="72dp"
-                    android:id="@+id/btnSave"
-                    android:text="保存"
                     android:layout_height="wrap_content"/>
             <Button android:layout_width="wrap_content"
                     android:id="@+id/btnSetSuperscript"
