--- a/app/src/main/res/layout/activity_notelist.xml
+++ b/app/src/main/res/layout/activity_notelist.xml
@@ -6,19 +6,27 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true">
-<!--    <android.support.design.widget.AppBarLayout
+    <android.support.design.widget.AppBarLayout
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:theme="@style/AppTheme.AppBarOverlay">
+
         <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="?attr/colorPrimary"
                 android:scrollbars="vertical"
-                app:popupTheme="@style/AppTheme.PopupOverlay">
+                app:popupTheme="@style/AppTheme.PopupOverlay"
+                android:gravity="center">
+            <TextView
+                    android:text="FullEditNote"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:layout_weight="1" android:textSize="20sp" android:textStyle="normal|bold"/>
         </android.support.v7.widget.Toolbar>
-    </android.support.design.widget.AppBarLayout>-->
+    </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_main"/>
 
